# workflows

./: .flake8  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  sam_workflows.spec  settings.py  workflows.spec
.github/: dependabot.yml
.github/workflows/: tests.yml
data/: importimages.csv
examples/: 02_config_makePdfAccess.yaml  exportPdf.csv  pdfDone.csv  subparsers.py  unitGoogleStorageConnector.py  unitImageMagick.py  unitLoadCSVtoMem.py
helpers/: __init__.py  csv.py  watermark.py
sam_workflows/: cli.py  config.py  main.py  sam_workflows.spec  settings.py
sam_workflows/acastorage/: __init__.py  main.py
sam_workflows/cloud/: __init__.py  blobstore.py  blobstore2.py  exceptions.py
sam_workflows/commands/: __init__.py  accessfiles.py  search.py
sam_workflows/config/: __init__.py  config.py
sam_workflows/converters/: exceptions.py  image.py  pdf.py  video.py
sam_workflows/data/: sam_export.csv
sam_workflows/helpers/: __init__.py  blobstore.py  config.py  convert.py  csv.py  subprocess.py  watermark.py
sam_workflows/subcommands/: __init__.py  accessfiles.py  images2pdf.py
sam_workflows/utils/: __init__.py  csv.py  files.py  subprocess.py  watermark.py
source/: main.py  sam_workflows.spec
source/acastorage/: __init__.py  main.py
source/converters/: __init__.py  image.py  pdf.py  video.py
source/helpers/: blobstore.py  config.py  convert.py  csv.py  subprocess.py
source/subcommands/: __init__.py  accessfiles.py
src/: main.py
src/acastorage/: __init__.py
src/converters/: __init__.py  image.py  pdf.py  video.py
src/helpers/: __init__.py  blobstore.py
src/subcommands/: accessfiles.py
subcommands/: __init__.py  accessfiles.py  images2jpg.py  pdf2access.py
tests/: test_export.csv
workflows/: cli.py
workflows/cloud/: __init__.py  blobstore.py  blobstore2.py
workflows/commands/: accessfiles.py  search.py
workflows/config/: __init__.py  config.py
workflows/converters/: __init__.py  audio.py  image.py  pdf.py  video.py
workflows/utils/: fileio.py  sp.py
