[project]
name = "workflows"
version = "0.6.6"

[tool.poetry]
name = "workflows"
version = "0.6.6"
description = "Workflows for SAM used at Aarhus City Archives"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gooey = "*"
pymupdf = "^1.19"
azure-storage-blob = "^12.8.1"
pillow = "^10.2.0"
attrdict = "^2.0.1"

[tool.poetry.scripts]
workflows = "workflows.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pyinstaller = "^5.13.2"

[tool.black]
line-length = 89

[build-system]
requires = ["poetry>=1.11"]
build-backend = "poetry.core.masonry.api"
